2008-07-24  Hui Zhu  <teawater@gmail.com>

	Add a element "to_support_record_wait" to target_ops.

	* target.h (target_ops): Add a element "to_support_record_wait".
	Default value is 0. Mean that this target doesn't support record wait.
	Need the help of infrun.c(handle_inferior_event). Set to 1 if this
	target support record wait.
	* target.c (add_target): Set the default value of
	"to_support_record_wait".
	* record.h (RECORD_TARGET_SUPPORT_RECORD_WAIT): New macro. It use to
	access "to_support_record_wait" of the target that is above the record
	target.
	* linux-nat.c (linux_nat_add_target): Set t->to_support_record_wait to
	1 to point out that this target support record wait with itself.
 
 	Optimize infrun.c.
 
 	* infrun.c: Add some new comment.
 	(handle_inferior_event): Optimize it. Change "RECORD_IS_USED" to
	"RECORD_TARGET_SUPPORT_RECORD_WAIT".

2008-07-20  Hui Zhu  <teawater@gmail.com>

	Add record target to GDB.

	* linux-record.c, linux-record.h: New files. Record and reverse 
	target code for GNU/Linux.
	* record.c, record.h: New files. Record and reverse target.
 	* Makefile.in: Add files record.c, record.h, linux-record.c and
	linux-record.h.
	* configure.tgt: Add files linux-record.c and linux-record.h.
	* gdbarch.c, gdbarch.h: Add elements "record" and "record_dasm".
	* i386-linux-tdep.c (linux_record_tdep): New static variable. 
	I386 Linux record target-dependent stuff.
	(i386_linux_intx80_sysenter_record): New function. Record the 
	running message of I386 Linux system call.
	(i386_linux_init_ab): Initialize the linux_record_tdep. Add
	i386_linux_intx80_sysenter_record to struct tdep.
	* i386-tdep.c (i386_record_modrm, i386_record_lea_modrm_addr,
	i386_record_lea_modrm, i386_record): New functions. Record the 
	running message of I386 instruction.
	(i386_gdbarch_init): Add i386_record to struct gdbarch.
	* i386-tdep.h (gdbarch_tdep): Add elements "i386_intx80_record"
	and "i386_sysenter_record" to be the interfaces that record the